--- a/views/global/header.html
+++ b/views/global/header.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }} &#8226; {{ page.websiteTitle }}</title>
     <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 
