--- a/views/global/footer.html
+++ b/views/global/footer.html
@@ -7,3 +7,14 @@
     <script src="/js/jquery.numeric.min.js"></script>
   </body>
 </html>
+
+    </div>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/custom.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/cbpAnimatedHeader.js"></script>
+    <script src="/js/agency.js"></script>
+    </body>
+    </html>
