--- a/views/global/header.html
+++ b/views/global/header.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#contact">Login</a>
+                        <a class="page-scroll" href="/login">Login</a>
                     </li>
                 </ul>
             </div>
