--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,10 @@
-{% debug %}
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">Welcome To Labour Hire</div>
+                <div class="intro-heading">It's Nice To Meet You</div>
+                <a href="#about" class="page-scroll btn btn-xl">Find out more here</a>
+            </div>
+        </div>
+    </header>
