Add search to home page

--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,18 @@
-{% debug %}
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="intro-text">
+            <div class="intro-heading">
+                Start searching for jobs now
+            </div>
+            <div class="intro-search">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="button">Search</button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
