--- a/less/custom/agency-theme.less
+++ b/less/custom/agency-theme.less
@@ -175,7 +175,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-  font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,cursive;
   color: #fed136;
 }
 
@@ -264,14 +264,7 @@ fieldset[disabled] .btn-xl.active {
 header {
   text-align: center;
   color: #fff;
-  background-attachment: scroll;
-  background-image: url(../img/header-bg.jpg);
-  background-position: center center;
-  background-repeat: none;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  background-color: #333333;
 }
 
 header .intro-text {
@@ -298,8 +291,8 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
   header .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
+    padding-top: 150px;
+    padding-bottom: 100px;
   }
 
   header .intro-text .intro-lead-in {
@@ -314,7 +307,7 @@ header .intro-text .intro-heading {
     margin-bottom: 50px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 75px;
+    font-size: 50px;
     font-weight: 700;
     line-height: 75px;
   }
