--- a/views/global/header.html
+++ b/views/global/header.html
@@ -16,10 +16,10 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 </head>
 
-<body id="page-top" class="index">
+<body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">LabourHire</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,12 +44,3 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-
-    <div class="container">
-
-        {% for error in page.flash.error %}
-            <div class="alert alert-danger" role="alert">{{ error }}</div>
-        {% endfor %}
-        {% for success in page.flash.success %}
-            <div class="alert alert-success" role="alert">{{ success }}</div>
-        {% endfor %}
