Created singup page and edited login layout.

--- a/views/session/login.html
+++ b/views/session/login.html
@@ -1,23 +1,26 @@
-<form class="form-login" method="POST">
-    <h2 class="form-login-heading">Login</h2>
-    <hr>
+<div class=" container login-container"
+	<form class="form-login" method="POST">
+		<h2 class="form-login-heading">Login</h2>
+		<hr>
 
-    <div class="form-group has-feedback">
-        <label for="login[studentId]" class="sr-only">Student ID</label>
-        <input type="text" id="login[studentId]" class="form-control numeric input-lg" name="login[studentId]" required autofocus placeholder="Student ID">
-        <i class="fa fa-user form-control-feedback"></i>
-    </div>
+		<div class="form-group has-feedback">
+			<label for="login[username]" class="sr-only">Username</label>
+			<input type="text" id="login[studentId]" class="form-control numeric input-lg" name="login[username]" required autofocus placeholder="Username">
+			<i class="fa fa-user form-control-feedback"></i>
+		</div>
 
-    <div class="form-group has-feedback">
-        <label for="login[password]" class="sr-only">Password</label>
-        <input type="password" id="login[password]" class="form-control input-lg" name="login[password]" required placeholder="Password">
-        <i class="fa fa-lock form-control-feedback"></i>
-    </div>
+		<div class="form-group has-feedback">
+			<label for="login[password]" class="sr-only">Password</label>
+			<input type="password" id="login[password]" class="form-control input-lg" name="login[password]" required placeholder="Password">
+			<i class="fa fa-lock form-control-feedback"></i>
+		</div>
 
-    <div class="checkbox">
-        <label>
-            <input type="checkbox" value="yes" name="login[rememberMe]"> Remember me
-        </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-</form>
+		<div class="checkbox">
+			<label>
+				<input type="checkbox" value="yes" name="login[rememberMe]"> Remember me
+			</label>
+		</div>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+	</form>
+	<p>Not registered? <a href="signup">Sign Up!</a></p>
+</div>
