--- a/views/global/header.html
+++ b/views/global/header.html
@@ -29,14 +29,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">LabourHire</a>
+                <a class="navbar-brand page-scroll" href="/">LabourHire</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#contact">Login</a>
+                        <a class="page-scroll" href="login">Login</a>
                     </li>
                 </ul>
             </div>
