--- a/views/about.html
+++ b/views/about.html
@@ -5,8 +5,22 @@
             <div class="intro-heading">
                 About Us
             </div>
-                </div>
+            <div class="intro-follow">
+                We're here to help you
             </div>
+
         </div>
     </div>
 </header>
+<section>
+    <div class="container">
+        <div class="about-sub-heading">
+            What we offer
+        </div>
+        <div>
+            <p class="about-para">
+                Information about our company, bla bla bla bla bla
+            </p>
+        </div>
+    </div>
+</section>
