Worked on stuff

--- a/views/global/footer.html
+++ b/views/global/footer.html
@@ -1,6 +1,7 @@
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/custom.js"></script>
+	<script src="/js/user/profile.js"></script>
     <script src="/js/jquery.easing.min.js"></script>
     <script src="/js/css_auto-reload.js"></script>
     <script src="/js/jquery.numeric.min.js"></script>
