--- a/views/session/login.html
+++ b/views/session/login.html
@@ -1,11 +1,11 @@
-<div class=" container login-container"
+<div class="container login-container"
 	<form class="form-login" method="POST">
 		<h2 class="form-login-heading">Login</h2>
 		<hr>
 
 		<div class="form-group has-feedback">
 			<label for="login[username]" class="sr-only">Username</label>
-			<input type="text" id="login[studentId]" class="form-control numeric input-lg" name="login[username]" required autofocus placeholder="Username">
+			<input type="text" id="login[studentId]" class="form-control input-lg" name="login[username]" required autofocus placeholder="Username">
 			<i class="fa fa-user form-control-feedback"></i>
 		</div>
 
