added a button to about page

--- a/less/custom/about.less
+++ b/less/custom/about.less
@@ -15,3 +15,13 @@ p.about-para{
   text-align: center;
 	
 }
+
+.about-button-text{
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 50px;
+  text-align: center;
+}
