--- a/views/about.html
+++ b/views/about.html
@@ -8,7 +8,9 @@
             <div class="intro-follow">
                 We're here to help you
             </div>
-
+                <div>
+                    <button class="btn btn-lg btn-primary about-button-text" type="submit">Sign Up Now</button>
+                </div>
         </div>
     </div>
 </header>
