Worked on signup and profile pages

--- a/views/session/signup.html
+++ b/views/session/signup.html
@@ -1,9 +1,10 @@
 <form class="form-signup container signup-container" method="POST">
 	<h2 class="form-signup-heading">Sign Up</h2>
+	<hr>
 	
 	<div class="form-group has-feedback">
-        <label for="signup[username]" class="sr-only">Username</label>
-        <input type="text" id="signup[username]" class="form-control numeric input-lg" name="signup[username]" required autofocus placeholder="Username">
+        <label for="signup[email]" class="sr-only">Username</label>
+        <input type="text" id="signup[email]" class="form-control numeric input-lg" name="signup[email]" required autofocus placeholder="Email">
         <i class="fa fa-user form-control-feedback"></i>
     </div>
 	
@@ -12,6 +13,16 @@
         <input type="password" id="signup[password]" class="form-control input-lg" name="signup[password]" required placeholder="Password">
         <i class="fa fa-lock form-control-feedback"></i>
     </div>
+	<div class="form-group has-feedback">
+        <label for="signup[confirm-password]" class="sr-only">Confirm Password</label>
+        <input type="password" id="signup[confirm-password]" class="form-control input-lg" name="signup[confirm-password]" required placeholder="Confirm Password">
+        <i class="fa fa-lock form-control-feedback"></i>
+    </div>
+	
+	<div class="form-group signup-radials">
+		<input type="radio" name="profile[user-type]" value="0" checked> <a href="#" data-toggle="tooltip" data-placement="top" title="You are labourer looking for work">Worker</a>
+		<input type="radio" name="profile[user-type]" value="1" checked> <a href="#" data-toggle="tooltip" data-placement="top" title="You are an employer looking for labourers">Employer</a>
+	</div>
 	
 	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
 </form>
