Basic profile stub

--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -1,27 +1,9 @@
 <div class="container">
 	<h1>Profile</h1>
-	<form class="form-profile" method="POST">
-		<h2 class="form-profile-heading">Edit your information</h2>
-		<hr>
-
-		<div class="form-group has-feedback">
-			<label for="profile[name]" class="sr-only">Name</label>
-			<input type="text" id="profile[name]" class="form-control input-lg" name="profile[name]" required autofocus placeholder="Name">
-			<i class="fa fa-user form-control-feedback"></i>
-		</div>
-		
-		<div class="form-group has-feedback">
-			<label for="profile[phone]" class="sr-only">phone</label>
-			<input type="text" id="profile[phone]" class="form-control numeric input-lg" name="profile[phone]" autofocus placeholder="Phone">
-			<i class="fa fa-phone form-control-feedback"></i>
-		</div>
-		
-		<div class="form-group has-feedback">
-			<label for="profile[about]" class="sr-only">About me</label>
-			<textarea id="profile[about]" class="form-control" name="profile[about]" autofocus placeholder="About Me"></textarea>
-		</div>
-
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Submit Changes</button>
-	</form>
+	<div><p id="userName">Test Name</p></div>
+	<div><p id="userEmail">Test Email</p></div>
+	<div><p id="userContactNumber">Test Contact Number</p></div>
+	<div><p id="userAbout">Test About Me</p></div>
+	<div><p id="userQualifications">Test Qualifications</p></div>
 </div>
 </div>
