--- a/views/global/header.html
+++ b/views/global/header.html
@@ -41,6 +41,9 @@
                     <li>
                         <a class="page-scroll" href="login">Login</a>
                     </li>
+					<li>
+                        <a class="page-scroll" href="profile">Profile</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
