Add logout navbar clean up

--- a/views/global/header.html
+++ b/views/global/header.html
@@ -36,14 +36,21 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="about">About Us</a>
+                        <a class="page-scroll" href="/about">About Us</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="login">Login</a>
-                    </li>
-					<li>
-                        <a class="page-scroll" href="profile">Profile</a>
-                    </li>
+                    {% if page.loggedin == true %}
+                        <li>
+                            <a class="page-scroll" href="/profile">Profile</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="/logout">Logout</a>
+                        </li>
+                    {% endif %}
+                    {% if page.loggedin == false %}
+                        <li>
+                            <a class="page-scroll" href="/login">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
