Clean up notifications

--- a/views/global/footer.html
+++ b/views/global/footer.html
@@ -7,16 +7,35 @@
     <script src="/js/custom.js"></script>
     <script src="/js/toastr.min.js"></script>
     <script>
+        toastr.options = {
+            "closeButton": true,
+            "debug": false,
+            "newestOnTop": true,
+            "progressBar": false,
+            "positionClass": "toast-bottom-right",
+            "preventDuplicates": true,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        }
+
         var errors = [];
+
         {% for error in page.flash.error %}
             errors.push('{{error}}');
             {% endfor %}
             for (var error in errors) {
                 toastr.error(errors[error]);
             }
-    </script>
-    <script>
+
         var successes = [];
+
         {% for success in page.flash.success %}
             successes.push('{{success}}');
             {% endfor %}
