--- a/views/index.html
+++ b/views/index.html
@@ -14,5 +14,7 @@
                 </div>
             </div>
         </div>
+        <div class="job-offers">
+        </div>
     </div>
 </header>
