basic advertisement display on main page

--- a/less/custom/home.less
+++ b/less/custom/home.less
@@ -6,3 +6,14 @@
     border-radius: 2px;
   }
 }
+.offers-container{
+  padding-top: 20px;
+  text-align: center;
+}
+.offer-panel{
+  text-align: left;
+  width: 400px;
+  height: 200px;
+  display: inline-table;
+  margin: 15px;
+}
