--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,9 @@
                 </div>
             </div>
         </div>
-        <div class="job-offers">
-        </div>
     </div>
 </header>
+<main>
+    <div id="job-offers" class="container offers-container">
+    </div>
+</main>
