updates to offers, adverts and profile

--- a/less/custom/home.less
+++ b/less/custom/home.less
@@ -10,7 +10,7 @@
   padding-top: 20px;
   text-align: center;
 }
-.offer-panel{
+.advert-panel{
   text-align: left;
   width: 400px;
   height: 200px;
