--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -1,20 +1,28 @@
 <div class="container">
 	<h1>Profile</h1>
-	<div id="displayDetails">
-		<div id="details_name"><h4>Name</h4><p></p></div>
-		<div id="details_email"><h4>Email</h4><p></p></div>
-		<div id="details_contactno"><h4>Contact Number</h4><p></p></div>
-		<div id="details_about"><h4>About</h4><p id="userAbout"></p></div>
-		<div id="details_qualifications" style="display: none"><h4>Qualifications</h4><p></p></div>
-		<div id="details_website" style="display:none"><h4>Website</h4><p></p></div>
-		<button class="btn btn-primary" id="editDetailsButton">Edit Details</button>
-	</div>
-	<div id="editDetails" style="display: none;">
-		<div id="edit_name"><h4>Name</h4><input type="text" id="name_input"></input></div>
-		<div id="edit_email"><h4>Email</h4><input type="text" id="email_input"></input></div>
-		<div id="edit_contactno"><h4>Contact Number</h4><input type="text" id="contactno_input"></input></div>
-		<div id="edit_about"><h4>About</h4><textarea id="about_input"></textarea></div>
-		<div id="edit_qualifications" style="display: none"><h4>Qualifications</h4><textarea id="qualifications_input"></textarea></div>
-		<div id="edit_website" style="display: none"><h4>Website</h4><input type="text" id="website_input"></input></div>
+	<div id="detailsSection" class="row" style="display: none">
+		<div id="displayDetails" class="col-md-6">
+			<div id="details_name"><h4>Name</h4><p></p></div>
+			<div id="details_email"><h4>Email</h4><p></p></div>
+			<div id="details_contactno"><h4>Contact Number</h4><p></p></div>
+			<div id="details_about"><h4>About</h4><p id="userAbout"></p></div>
+			<div id="details_qualifications" style="display: none"><h4>Qualifications</h4><p></p></div>
+			<div id="details_website" style="display:none"><h4>Website</h4><p></p></div>
+			<button class="btn btn-primary" id="editDetailsButton">Edit Details</button>
+		</div>
+
+		<div id="editDetails" class="col-md-6" style="display: none;">
+			<div id="edit_name"><h4>Name</h4><input type="text" id="name_input"/></div>
+			<div id="edit_email"><h4>Email</h4><input type="text" id="email_input"/></div>
+			<div id="edit_contactno"><h4>Contact Number</h4><input type="text" id="contactno_input"/></div>
+			<div id="edit_about"><h4>About</h4><textarea id="about_input"></textarea></div>
+			<div id="edit_qualifications" style="display: none"><h4>Qualifications</h4><textarea id="qualifications_input"></textarea></div>
+			<div id="edit_website" style="display: none"><h4>Website</h4><input type="text" id="website_input"/></div>
+			<button class="btn btn-default" id="cancelEditDetails">Cancel</button>
+			<button class="btn btn-primary" id="updateUserDetails">Submit</button>
+		</div>
+		<div id="adverts" class="col-md-6">
+			All the adverts
+		</div>
 	</div>
 </div>
