--- a/less/custom/home.less
+++ b/less/custom/home.less
@@ -6,15 +6,16 @@
     border-radius: 2px;
   }
 }
-.offers-container{
+.advertisements-container {
   padding-top: 20px;
   text-align: center;
-  display: none;
 }
-.advert-panel{
+.advert-panel {
   text-align: left;
   width: 400px;
-  height: 200px;
   display: inline-table;
   margin: 15px;
+  .panel-footer {
+    text-align: right;
+  }
 }
