--- a/views/index.html
+++ b/views/index.html
@@ -14,11 +14,11 @@
                 </div>
             </div>
         </div>
-        <div class="job-offers">
-        </div>
     </div>
 </header>
-<main>
-    <div id="job-offers" class="container offers-container">
+
+<div class="container advertisements-container">
+    <h2>Some new advertisements:</h2>
+    <div id="advertisements-holder">
     </div>
-</main>
+</div>
