Add advertisement page

--- a/less/custom/global.less
+++ b/less/custom/global.less
@@ -3,3 +3,13 @@ body {
     margin-top: 80px;
   }
 }
+
+.info-subheading {
+  color: #888;
+}
+
+.advertisement-tags {
+  display: inline-block;
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
