--- a/less/custom/global.less
+++ b/less/custom/global.less
@@ -6,10 +6,15 @@ body {
 
 .info-subheading {
   color: #888;
+  margin-bottom: 15px;
 }
 
 .advertisement-tags {
   display: inline-block;
   margin-top: 0px;
   margin-bottom: 5px;
+}
+
+.advertisement-make-offer {
+  float: right;
 }
