Add company details to signup

--- a/views/session/signup.html
+++ b/views/session/signup.html
@@ -23,8 +23,8 @@
 		<hr>
 		
 		<div class="form-group signup-radials">
-            <input type="radio" name="profile[user-type]" value="worker" checked> <a href="#" data-toggle="tooltip" data-placement="top" title="You are labourer looking for work">Worker</a>
-            <input type="radio" name="profile[user-type]" value="employer" checked> <a href="#" data-toggle="tooltip" data-placement="top" title="You are an employer looking for labourers">Employer</a>
+            <input type="radio" name="signup[user-type]" value="worker" checked> <a href="#" data-toggle="tooltip" data-placement="top" title="You are labourer looking for work">Worker</a>
+            <input type="radio" name="signup[user-type]" value="employer" checked> <a href="#" data-toggle="tooltip" data-placement="top" title="You are an employer looking for labourers">Employer</a>
         </div>
 		
 		<div class="form-group has-feedback">
@@ -41,7 +41,7 @@
 
 		<div class="form-group has-feedback" id="su_company_location">
             <label for="signup[companylocation]" class="sr-only">Company Location</label>
-            <input type="text" id="su_company_location_input" class="form-control input-lg" name="signup[companyname]" placeholder="Company Location">
+            <input type="text" id="su_company_location_input" class="form-control input-lg" name="signup[companylocation]" placeholder="Company Location">
             <i class="fa fa-map-marker form-control-feedback"></i>
         </div>
 		
